# rust-synth

./: Cargo.toml  build_web.sh  index.html  package.json  synth.js
pkg/: package.json  rust_synth.d.ts  rust_synth.js  rust_synth_bg.js  rust_synth_bg.wasm  synth.d.ts  synth_bg.js  synth_bg.wasm  synth_bg.wasm.d.ts
src/: lib.rs  main.rs
src/app/: driver.rs  freq_nodes.rs  knob.rs  macros.rs  math_nodes.rs  mod.rs  modulator.rs  node.rs  note.rs  value_node.rs  wave.rs
