[package]
name = "synth"
version = "0.1.0"
authors = ["= <hjalte.nannestad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.38"
cpal = "0.13.1"
eframe = "0.10.0"
ron = "0.6.4"
serde = { version = "1.0.124", features = ["derive"] }
serde_traitobject = "0.2.7"
typetag = "0.1.7"
