[package]
name = "rust-synth"
version = "0.1.0"
authors = ["= <hjalte.nannestad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.38"
cpal = { version = "0.13.1", features = ["wasm-bindgen"] }
eframe = { version = "0.10.0", features = ["persistence"] }
serde_json = "1.0.59"
serde = { version = "1.0.124", features = ["derive"] }
serde_traitobject = "0.2.7"
console_error_panic_hook = "0.1.5"
crossbeam = "0.8.0"
